--- a/elements/elements.html
+++ b/elements/elements.html
@@ -16817,11 +16817,13 @@ module.exports = Array.isArray || function (arr) {
       
     page('/', function () {
         app.route = 'restaurants';
+        window.scrollTo(0, 0);
     }); 
       
     page('/restaurants/:placeid', function(data) {
       app.route = 'restaurant-info';
       app.params = data.params;
+      window.scrollTo(0, 0);      
     });  
 
     // 404
