--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="./bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <!-- Because this project uses vulcanize this should be your only html import
        in this file. All other imports should go in elements.html -->
   <link rel="import" href="elements/elements.html">
