--- a/app/elements/myFood/food-review.html
+++ b/app/elements/myFood/food-review.html
@@ -106,7 +106,7 @@
             </div>
             <div class="textWrapper">
                 <br/><br/>
-                <h2>[[ajaxResponse.result.name]]:</h2>
+                <h2>[[ajaxResponse.result.name]]</h2>
                 <div >
                     <paper-icon-button icon="home" disabled></paper-icon-button>[[ajaxResponse.result.formatted_address]]
                 </div>
