fix: submit function

--- a/app/elements/myFood/food-search.html
+++ b/app/elements/myFood/food-search.html
@@ -64,7 +64,7 @@
   <script>
     
         function _submit(event) {
-            Polymer.dom(event).localTarget.parentElement.submit();
+            //Polymer.dom(event).localTarget.parentElement.submit();
             console.log("Submitted!");
         }
         
