--- a/elements/elements.html
+++ b/elements/elements.html
@@ -24755,7 +24755,7 @@ event and do your own custom submission:
   <script>
     
         function _submit(event) {
-            Polymer.dom(event).localTarget.parentElement.submit();
+            //Polymer.dom(event).localTarget.parentElement.submit();
             console.log("Submitted!");
         }
         
