--- a/app/elements/myFood/food-review.html
+++ b/app/elements/myFood/food-review.html
@@ -128,7 +128,7 @@
                 <paper-dialog id="dialog" modal>
                     <h2>Add review</h2>
                     <paper-dialog-scrollable>
-                        <form is="iron-form" method="get" action="https://maps.googleapis.com/maps/api/place/nearbysearch/json?" id="reviewform">
+                        <form is="iron-form" method="get" action="/" id="reviewform">
                             <paper-input label="NAME" name="name" aria-label="name" autofocus required></paper-input>
                             <label for="rating">
                                 <div class="sliderTitle">RATING</div>
