--- a/elements/elements.html
+++ b/elements/elements.html
@@ -24755,7 +24755,7 @@ event and do your own custom submission:
   <script>
     
         function _submit(event) {
-            //Polymer.dom(event).localTarget.parentElement.submit();
+            Polymer.dom(event).localTarget.parentElement.submit();
             console.log("Submitted!");
         }
         
@@ -25819,7 +25819,7 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
                 <paper-dialog id="dialog" modal="">
                     <h2>Add review</h2>
                     <paper-dialog-scrollable>
-                        <form is="iron-form" method="get" action="https://maps.googleapis.com/maps/api/place/nearbysearch/json?" id="reviewform">
+                        <form is="iron-form" method="get" action="/" id="reviewform">
                             <paper-input label="NAME" name="name" aria-label="name" autofocus="" required=""></paper-input>
                             <label for="rating">
                                 <div class="sliderTitle">RATING</div>
