--- a/app/elements/myFood/food-review.html
+++ b/app/elements/myFood/food-review.html
@@ -108,7 +108,7 @@
             </div>
             <div class="textWrapper">
                 <br/><br/>
-                <h2>[[ajaxResult.name]]:</h2>
+                <h2>[[ajaxResult.name]]</h2>
                 <div >
                     <paper-icon-button icon="home" disabled></paper-icon-button>[[ajaxResult.formatted_address]]
                 </div>
