--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -20,8 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     //if (window.location.port === '') {  // if production
     //  page.base(app.baseUrl.replace(/\/$/, ''));
     //}
-//https://illl48.github.io/restaurant_reviewer/
-   page.base("/restaurant_reviewer");   
+page.base('/restaurant_reviewer');
     // Middleware
     /*      
     function scrollToTop(ctx, next) {
@@ -38,11 +37,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       
     page('/', function () {
         app.route = 'restaurants';
+        window.scrollTo(0, 0);
     }); 
       
     page('/restaurants/:placeid', function(data) {
       app.route = 'restaurant-info';
       app.params = data.params;
+      window.scrollTo(0, 0);      
     });  
 
     // 404
