--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     //if (window.location.port === '') {  // if production
     //  page.base(app.baseUrl.replace(/\/$/, ''));
     //}
-page.base('/restaurant_reviewer');
+page.base('/restaurant_reviewer#!');
     // Middleware
     /*      
     function scrollToTop(ctx, next) {
