--- a/elements/elements.html
+++ b/elements/elements.html
@@ -16800,7 +16800,7 @@ module.exports = Array.isArray || function (arr) {
     //if (window.location.port === '') {  // if production
     //  page.base(app.baseUrl.replace(/\/$/, ''));
     //}
-page.base('/restaurant_reviewer');
+page.base('/restaurant_reviewer#!');
     // Middleware
     /*      
     function scrollToTop(ctx, next) {
