--- a/elements/elements.html
+++ b/elements/elements.html
@@ -16800,7 +16800,7 @@ module.exports = Array.isArray || function (arr) {
     //if (window.location.port === '') {  // if production
     //  page.base(app.baseUrl.replace(/\/$/, ''));
     //}
-page.base('/restaurant_reviewer#!');
+page.base('/restaurant_reviewer');
     // Middleware
     /*      
     function scrollToTop(ctx, next) {
@@ -16835,7 +16835,7 @@ page.base('/restaurant_reviewer#!');
 
     // add #! before urls
     page({
-      hashbang: true
+      hashbang: false//true
     });
 
   });
