--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@ t=t.parentNode||t.nodeType===Node.DOCUMENT_FRAGMENT_NODE&&t.host}}function h(e){
         <div class="content">
             <iron-pages attr-for-selected="data-route" selected="{{route}}">
                 <section data-route="restaurants">
-                    <search-list base-url="restaurant_reviewer/"></search-list>       
+                    <search-list base-url="/"></search-list>       
                 </section>
 
                 <section data-route="restaurant-info">
