--- a/app/elements/myFood/food-list.html
+++ b/app/elements/myFood/food-list.html
@@ -79,7 +79,7 @@
                     <p class="vicinity">[[item.vicinity]]</p>
                 </div>
                 <div class="card-actions">
-                    <paper-button class="reviewlink" style="float:right;"><a href$="{{baseUrl}}restaurants/[[item.place_id]]">Reviews</a></paper-button>
+                    <paper-button class="reviewlink" style="float:right;"><a href$="restaurant_reviewer/restaurants/[[item.place_id]]">Reviews</a></paper-button>
                 </div>
             </paper-card>
         </template>
