--- a/elements/elements.html
+++ b/elements/elements.html
@@ -24676,7 +24676,7 @@ event and do your own custom submission:
                     <p class="vicinity">[[item.vicinity]]</p>
                 </div>
                 <div class="card-actions">
-                    <paper-button class="reviewlink" style="float:right;"><a href$="restaurant_reviewer/restaurants/[[item.place_id]]">Reviews</a></paper-button>
+                    <paper-button class="reviewlink" style="float:right;"><a href$="restaurants/[[item.place_id]]">Reviews</a></paper-button>
                 </div>
             </paper-card>
         </template>
