--- a/elements/elements.html
+++ b/elements/elements.html
@@ -25790,7 +25790,7 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
     
     <google-maps-api api-key="[[apiKey]]" id="maps" libraries="places" on-api-load="on_api_load"></google-maps-api>      
     <div class="backWrapper">
-      <a data-route="restaurants" href="[[baseUrl]]">
+      <a data-route="restaurants" href="">
           <paper-icon-button icon="reply"></paper-icon-button>
       </a>
     </div>  
