--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -50,7 +50,7 @@ page.base('/restaurant_reviewer');
     page('*', function() {
       //app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
       //app.$.toast.show();
-      page.redirect(app.baseUrl);
+      page.redirect('/restaurant_reviewer/');//app.baseUrl
     });
 
     // add #! before urls
