--- a/elements/elements.html
+++ b/elements/elements.html
@@ -16830,7 +16830,7 @@ page.base('/restaurant_reviewer');
     page('*', function() {
       //app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
       //app.$.toast.show();
-      page.redirect(app.baseUrl);
+      page.redirect('/restaurant_reviewer/');//app.baseUrl
     });
 
     // add #! before urls
@@ -25790,7 +25790,7 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
     
     <google-maps-api api-key="[[apiKey]]" id="maps" libraries="places" on-api-load="on_api_load"></google-maps-api>      
     <div class="backWrapper">
-      <a href="myFood/restaurant_reviewer">
+      <a href="http://illl48.github.io/restaurant_reviewer/">
           <paper-icon-button icon="reply"></paper-icon-button>
       </a>
     </div>  
