--- a/app/elements/myFood/food-search.html
+++ b/app/elements/myFood/food-search.html
@@ -94,10 +94,10 @@
           locationObj:{
             type: Object,  
           },    
-        ajaxResult:{
+          ajaxResult:{
             type: Array,
             notify: true,
-        },      
+          },      
             addressvalue: {
             type: String,
             notify: true
@@ -105,6 +105,10 @@
           place: {
             type: Object,
             value: function () { return {}; },
+            notify: true
+          },
+          noResult:{
+            type: Boolean, 
             notify: true
           }    
         },
@@ -156,6 +160,7 @@
             function callback(results, status) {
                 if (status == google.maps.places.PlacesServiceStatus.OK) {
                     this.ajaxResult=[];
+                    this.set("noResult", false);
                     for(var i=0; i<results.length; i++){
                         var tempObj={};
                         tempObj.name=results[i].name;
@@ -178,6 +183,15 @@
                     }
                     this.set("showForm", false);
                     window.scrollTo(0, 0);
+                }
+                else{
+                    console.log("Geocode was not successful for the following reason: " + status);
+            
+                    if(status==="ZERO_RESULTS"){
+                        console.log(status);
+                        this.set("showForm", false);
+                        this.set("noResult", true);
+                    }
                 }
             }          
             
