--- a/app/index.html
+++ b/app/index.html
@@ -24,11 +24,11 @@
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
         <paper-toolbar id="apptitle">
-            <div class="spacer title">RestaurantReviewer</div>
+            <header class="spacer title">RestaurantReviewer</header>
         </paper-toolbar>
           
         <!-- Main Content -->
-        <div class="content">
+        <div class="content" role="main" aria-label="sections wrapper">
             <iron-pages attr-for-selected="data-route" selected="{{route}}">
                 <section data-route="restaurants">
                     <search-list base-url="{{baseUrl}}"></search-list>       
