--- a/elements/elements.html
+++ b/elements/elements.html
@@ -25954,9 +25954,11 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
         }, 
         
         listeners: {
-            'reviewform.iron-form-submit': 'formSubmit'
+            'reviewform.iron-form-presubmit': 'formPreSubmit'
         },
-        formSubmit: function(event) {
+        formPreSubmit: function(event) {
+            event.preventDefault();
+            
             var reviewObj={};
             reviewObj.author_name= event.target.request.params['name'];
             reviewObj.time= this.getNowDate();
