--- a/app/elements/myFood/food-review.html
+++ b/app/elements/myFood/food-review.html
@@ -95,7 +95,7 @@
     <google-maps-api api-key="[[apiKey]]" id="maps" libraries="places" on-api-load="on_api_load"></google-maps-api>  
         
     <nav>
-      <a data-route="restaurants" href$="/">
+      <a data-route="restaurants" href$="./">
           <paper-icon-button icon="reply"></paper-icon-button>
       </a>
     </nav>
