--- a/app/elements/myFood/food-review.html
+++ b/app/elements/myFood/food-review.html
@@ -94,11 +94,11 @@
   <template>
     <google-maps-api api-key="[[apiKey]]" id="maps" libraries="places" on-api-load="on_api_load"></google-maps-api>  
         
-    <nav>
-      <a data-route="restaurants" href$="/restaurant_reviewer">
+    <div>
+      <a data-route="restaurants" href="/restaurant_reviewer">
           <paper-icon-button icon="reply"></paper-icon-button>
       </a>
-    </nav>
+    </div>
       
     <section class="bannerWrapper">
         <header class="banner">
