--- a/elements/elements.html
+++ b/elements/elements.html
@@ -25831,11 +25831,11 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
   <template>
     <google-maps-api api-key="[[apiKey]]" id="maps" libraries="places" on-api-load="on_api_load"></google-maps-api>  
         
-    <nav>
-      <a data-route="restaurants" href$="/restaurant_reviewer">
+    <div>
+      <a data-route="restaurants" href="/restaurant_reviewer">
           <paper-icon-button icon="reply"></paper-icon-button>
       </a>
-    </nav>
+    </div>
       
     <section class="bannerWrapper">
         <header class="banner">
