--- a/elements/elements.html
+++ b/elements/elements.html
@@ -25832,7 +25832,7 @@ The `aria-labelledby` attribute will be set to the header element, if one exists
     <google-maps-api api-key="[[apiKey]]" id="maps" libraries="places" on-api-load="on_api_load"></google-maps-api>  
         
     <nav>
-      <a data-route="restaurants" href="/restaurant_reviewer">
+      <a data-route="restaurants" href="/">
           <paper-icon-button icon="reply"></paper-icon-button>
       </a>
     </nav>
