--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -20,7 +20,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     //if (window.location.port === '') {  // if production
     //  page.base(app.baseUrl.replace(/\/$/, ''));
     //}
-page.base('/restaurant_reviewer');
+//page.base('/restaurant_reviewer');
+      page.base(window.location.pathname.replace(/\/$/, ''));
     // Middleware
     /*      
     function scrollToTop(ctx, next) {
@@ -50,7 +51,7 @@ page.base('/restaurant_reviewer');
     page('*', function() {
       //app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
       //app.$.toast.show();
-      page.redirect('/restaurant_reviewer/');//app.baseUrl
+      page.redirect('/');//app.baseUrl
     });
 
     // add #! before urls
